# mu-rs

./: Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: rust.yml  shiftleft-analysis.yml
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/convert/: trait.Into.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/mu/alb/deserializer/: trait.AlbDeserialize.js
docs/implementors/std/error/: trait.Error.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/mu/: all.html  index.html  sidebar-items.js
docs/mu/alb/: index.html  sidebar-items.js  struct.ElbContext.html  struct.Request.html  struct.RequestContext.html  struct.Response.html
docs/mu/alb/deserializer/: index.html  sidebar-items.js  trait.AlbDeserialize.html  trait.RpcRequest.html
docs/mu/alb/response/: fn.create.html  fn.create_json.html  fn.create_json_from_obj.html  fn.create_json_from_optional.html  fn.create_plain_text.html  fn.create_with_content_type.html  index.html  sidebar-items.js
docs/mu/alb/response/content_types/: constant.JSON.html  constant.PLAIN_TEXT.html  index.html  sidebar-items.js
docs/mu/alb/response/headers/: constant.CONTENT_TYPE.html  constant.LOCATION.html  fn.create_for.html  fn.create_for_optional.html  index.html  sidebar-items.js  type.Map.html
docs/mu/alb/runtime/: fn.listen_events.html  index.html  sidebar-items.js
docs/mu/alb/serializer/: index.html  sidebar-items.js  trait.AlbSerialize.html
docs/mu/lambda/: fn.listen_events.html  index.html  sidebar-items.js  struct.Context.html  struct.LambdaError.html  trait.Handler.html  type.LambdaResult.html  type.RuntimeResult.html
docs/src/mu/: lambda.rs.html  lib.rs.html
docs/src/mu/alb/: deserializer.rs.html  mod.rs.html  response.rs.html  runtime.rs.html  serializer.rs.html
example/rpc/: Cargo.toml
example/rpc/src/: lambda_user_create.rs  lambda_user_retrieve.rs  rpc_api.rs
source/: Cargo.toml
source/mu_alb/: Cargo.toml
source/mu_alb/src/: deserializer.rs  lib.rs  response.rs  runtime.rs  serializer.rs
source/mu_runtime/: Cargo.toml
source/mu_runtime/src/: error.rs  lambda_api.rs  lib.rs  model.rs  runtime.rs
source/mu_runtime/tests/: sample_alb_request.json  sample_cognito_context.json  sample_cognito_identity.json  serialization.rs
src/: alb.rs  lambda.rs  lib.rs  runtime.rs
src/alb/: deserializer.rs  mod.rs  response.rs  runtime.rs  serializer.rs
