[package]
name = "lambda_runtime_ext"
version = "0.1.0"
authors = ["Miere Teixeira <miere@securecodewarrior.com>"]
edition = "2018"

[lib]

[dependencies]
aws_lambda_events = "0.3.0"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = "0.2"

# This dependency is still in pre-release, thus it's fixed into an stable version.
[dependencies.lambda]
git = "https://github.com/awslabs/aws-lambda-rust-runtime/"
rev = "c8dbcd39e0b1cf9ecf395e2b2f9df6c6c0d97780"
