[package]
name = "mu_alb"
version = "0.2.0"
authors = ["Miere Teixeira <miere@securecodewarrior.com>"]
edition = "2018"

[lib]

[dependencies]
aws_lambda_events = "^0.4.0"
http = "0.2.4"
serde = "1.0"
serde_json = "1.0"
mu_runtime = { path = "../mu_runtime", version = "0.2.0" }

[dev-dependencies]
httpmock = "0.5.8"