[package]
name = "mu_runtime"
version = "0.2.0"
authors = ["Miere Teixeira <miere@securecodewarrior.com>"]
edition = "2018"

[lib]

[dependencies]
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
hyper = { version = "0.14", features = ["client","http1","tcp"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
aws_lambda_events = "^0.4.0"
httpmock = "0.5.8"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
maplit = "1.0.2"
